Fixed overlapping of heading and navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -77,6 +77,7 @@ body{
     height: 80px;
     left: 0px;
     top: 0px;
+    bottom: 100px;
     display: flex;
     justify-content: space-between;
     background-color: white;
